# WalkMyGraph

./: .gitignore  .project  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: build.yml
scripts/: blackisort
search/: search_index.json
tests/: testcli.py
wmg/: cli.py  version.py
